bindings_swift/module.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    int32_t capacity;
    int32_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
// Scaffolding functions
void uniffi_client_fn_free_client(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_client_fn_constructor_client_new(RustBuffer db_name, RustBuffer endpoint, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_callback(void*_Nonnull ptr, RustBuffer callback, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_uploader(void*_Nonnull ptr, RustBuffer uploader, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_prepare(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_attach(void*_Nonnull ptr, RustBuffer info, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_app_active(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_app_deactivate(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_logout(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_run_loop(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_shutdown(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_network_state(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint32_t uniffi_client_fn_method_client_get_topics_knock_count(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint32_t uniffi_client_fn_method_client_get_conversations_count(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_conversation(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_remove_conversation(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_conversation_sticky(void*_Nonnull ptr, RustBuffer topic_id, int8_t sticky, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_conversation_mute(void*_Nonnull ptr, RustBuffer topic_id, int8_t mute, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_conversation_read(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_conversations(void*_Nonnull ptr, RustBuffer updated_at, uint32_t limit, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_sync_conversations(void*_Nonnull ptr, int8_t without_cache, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_topic(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_topic_admins(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_topic_owner(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_topic_members(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer updated_at, uint32_t limit, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_chat_logs_desc(void*_Nonnull ptr, RustBuffer topic_id, uint64_t start_seq, uint64_t end_seq, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_chat_log(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_search_chat_log(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer sender_id, RustBuffer keyword, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_topic_knocks(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_create_topic(void*_Nonnull ptr, RustBuffer name, RustBuffer icon, RustBuffer members, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_create_chat(void*_Nonnull ptr, RustBuffer user_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_update_topic(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer name, RustBuffer icon, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_update_topic_notice(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer text, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_silent_topic(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer duration, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_silent_topic_member(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer user_id, RustBuffer duration, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_add_topic_admin(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer user_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_remove_topic_admin(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer user_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_transfer_topic(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer user_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_quit_topic(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_dismiss_topic(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_join_topic(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer source, RustBuffer message, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_accept_topic_join(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer user_id, RustBuffer memo, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_decline_topic_join(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer user_id, RustBuffer message, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_invite_topic_member(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer user_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_remove_topic_member(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer user_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_clean_topic_history(void*_Nonnull ptr, RustBuffer topic_id, int8_t sync, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_remove_messages(void*_Nonnull ptr, RustBuffer topic_id, RustBuffer chat_ids, int8_t sync, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_user(void*_Nonnull ptr, RustBuffer user_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_user_remark(void*_Nonnull ptr, RustBuffer user_id, RustBuffer remark, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_user_star(void*_Nonnull ptr, RustBuffer user_id, int8_t star, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_user_block(void*_Nonnull ptr, RustBuffer user_id, int8_t block, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_allow_guest_chat(void*_Nonnull ptr, int8_t allow, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_do_typing(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);