bindings_python/client.py


_UniFFILib = loadIndirect()
_UniFFILib.uniffi_client_fn_free_client.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_free_client.restype = None
_UniFFILib.uniffi_client_fn_constructor_client_new.argtypes = (
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_constructor_client_new.restype = ctypes.c_void_p
_UniFFILib.uniffi_client_fn_method_client_set_callback.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_set_callback.restype = None
_UniFFILib.uniffi_client_fn_method_client_set_uploader.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_set_uploader.restype = None
_UniFFILib.uniffi_client_fn_method_client_prepare.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_prepare.restype = None
_UniFFILib.uniffi_client_fn_method_client_attach.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_attach.restype = None
_UniFFILib.uniffi_client_fn_method_client_app_active.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_app_active.restype = None
_UniFFILib.uniffi_client_fn_method_client_app_deactivate.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_app_deactivate.restype = None
_UniFFILib.uniffi_client_fn_method_client_logout.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_logout.restype = None
_UniFFILib.uniffi_client_fn_method_client_run_loop.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_run_loop.restype = None
_UniFFILib.uniffi_client_fn_method_client_shutdown.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_shutdown.restype = None
_UniFFILib.uniffi_client_fn_method_client_get_network_state.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_network_state.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_get_topics_knock_count.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_topics_knock_count.restype = ctypes.c_uint32
_UniFFILib.uniffi_client_fn_method_client_get_conversations_count.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_conversations_count.restype = ctypes.c_uint32
_UniFFILib.uniffi_client_fn_method_client_get_conversation.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_conversation.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_remove_conversation.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_remove_conversation.restype = None
_UniFFILib.uniffi_client_fn_method_client_set_conversation_sticky.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.c_int8,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_set_conversation_sticky.restype = None
_UniFFILib.uniffi_client_fn_method_client_set_conversation_mute.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.c_int8,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_set_conversation_mute.restype = None
_UniFFILib.uniffi_client_fn_method_client_set_conversation_read.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_set_conversation_read.restype = None
_UniFFILib.uniffi_client_fn_method_client_get_conversations.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.c_uint32,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_conversations.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_sync_conversations.argtypes = (
    ctypes.c_void_p,
    ctypes.c_int8,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_sync_conversations.restype = None
_UniFFILib.uniffi_client_fn_method_client_get_topic.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_topic.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_get_topic_admins.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_topic_admins.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_get_topic_owner.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_topic_owner.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_get_topic_members.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.c_uint32,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_topic_members.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_get_chat_logs_desc.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_chat_logs_desc.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_get_chat_log.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_chat_log.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_search_chat_log.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_search_chat_log.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_get_topic_knocks.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_topic_knocks.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_create_topic.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_create_topic.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_create_chat.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_create_chat.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_update_topic.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_update_topic.restype = None
_UniFFILib.uniffi_client_fn_method_client_update_topic_notice.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_update_topic_notice.restype = None
_UniFFILib.uniffi_client_fn_method_client_silent_topic.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_silent_topic.restype = None
_UniFFILib.uniffi_client_fn_method_client_silent_topic_member.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_silent_topic_member.restype = None
_UniFFILib.uniffi_client_fn_method_client_add_topic_admin.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_add_topic_admin.restype = None
_UniFFILib.uniffi_client_fn_method_client_remove_topic_admin.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_remove_topic_admin.restype = None
_UniFFILib.uniffi_client_fn_method_client_transfer_topic.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_transfer_topic.restype = None
_UniFFILib.uniffi_client_fn_method_client_quit_topic.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_quit_topic.restype = None
_UniFFILib.uniffi_client_fn_method_client_dismiss_topic.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_dismiss_topic.restype = None
_UniFFILib.uniffi_client_fn_method_client_join_topic.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_join_topic.restype = None
_UniFFILib.uniffi_client_fn_method_client_accept_topic_join.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_accept_topic_join.restype = None
_UniFFILib.uniffi_client_fn_method_client_decline_topic_join.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_decline_topic_join.restype = None
_UniFFILib.uniffi_client_fn_method_client_invite_topic_member.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_invite_topic_member.restype = None
_UniFFILib.uniffi_client_fn_method_client_remove_topic_member.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_remove_topic_member.restype = None
_UniFFILib.uniffi_client_fn_method_client_clean_topic_history.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.c_int8,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_clean_topic_history.restype = None
_UniFFILib.uniffi_client_fn_method_client_remove_messages.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.c_int8,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_remove_messages.restype = None
_UniFFILib.uniffi_client_fn_method_client_get_user.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_get_user.restype = RustBuffer
_UniFFILib.uniffi_client_fn_method_client_set_user_remark.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    RustBuffer,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_set_user_remark.restype = None
_UniFFILib.uniffi_client_fn_method_client_set_user_star.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.c_int8,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_set_user_star.restype = None
_UniFFILib.uniffi_client_fn_method_client_set_user_block.argtypes = (
    ctypes.c_void_p,
    RustBuffer,
    ctypes.c_int8,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_set_user_block.restype = None
_UniFFILib.uniffi_client_fn_method_client_set_allow_guest_chat.argtypes = (
    ctypes.c_void_p,
    ctypes.c_int8,
    ctypes.POINTER(RustCallStatus),
)
_UniFFILib.uniffi_client_fn_method_client_set_allow_guest_chat.restype = None
_UniFFILib.uniffi_client_fn_method_client_do_typing.argtypes = (
    ctypes.c_void_p,
